--- a/cafe/cafe.csproj
+++ b/cafe/cafe.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="9.0.2" />
+    <PackageReference Include="ReaLTaiizor" Version="3.8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
